# pifantuner

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
include/: argon.h  pifantuner.h  pifantunerd.h
scripts/: pifantuner.service
src/: argon.c  main.c  pifantuner.c  pifantunerd.cpp
src/daemon/: main.c
src/lib/: pifantuner.c
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
